--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAQLIV Profile</title>
+    <title>anonymoouzz</title>
     <style>
         * {
             margin: 0;
@@ -874,7 +874,7 @@
                 </div>
                 <div class="profile-info">
                     <div class="name-and-badges">
-                        <div id="profile-name">JAQLIV</div>
+                        <div id="profile-name">Anonymoouzz</div>
                         <div class="badge-box">
                             <div class="badge-box-inner">
                                 <div class="badge-group">
@@ -927,13 +927,13 @@
             <div class="profile-footer">
 
                 <div class="social-links">
-                    <a href="https://discord.gg/motiongoats" target="_blank">
+                    <a href="" target="_blank">
                         <img src="assets/discord.png" alt="Discord" class="social-icon">
                     </a>
-                    <a href="https://github.com/JAQLIV" target="_blank">
+                    <a href="https://github.com/anonymoouzz" target="_blank">
                         <img src="assets/github.png" alt="GitHub" class="social-icon">
                     </a>
-                    <a href="https://www.youtube.com/@jaqliv" target="_blank">
+                    <a href="https://www.youtube.com/@99tlc" target="_blank">
                         <img src="assets/youtube.png" alt="YouTube" class="social-icon">
                     </a>
                     <a href="https://www.tiktok.com/@jaqliv" target="_blank">
@@ -966,28 +966,7 @@
                     <div id="python-bar" class="skill-bar"></div>
                 </div>
             </div>
-            <div class="skill">
-                <div class="skill-name">
-                    <img src="assets/cpp.png" alt="C++" class="skill-icon">
-                    <span>C++</span>
-                    <span>75%</span>
-                </div>
-                <div class="skill-bar-container">
-                    <div id="cpp-bar" class="skill-bar"></div>
-                </div>
-            </div>
-            <div class="skill">
-                <div class="skill-name">
-                    <img src="assets/csharp.png" alt="C#" class="skill-icon">
-                    <span>C#</span>
-                    <span>80%</span>
-                </div>
-                <div class="skill-bar-container">
-                    <div id="csharp-bar" class="skill-bar"></div>
-                </div>
-            </div>
-        </div>
-
+            
 
         <div id="results-button-container" class="hidden">
             <button id="results-theme">View Results</button>
@@ -1044,4 +1023,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
