--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
                     <a href="https://www.youtube.com/@99tlc" target="_blank">
                         <img src="assets/youtube.png" alt="YouTube" class="social-icon">
                     </a>
-                    <a href="https://www.tiktok.com/@jaqliv" target="_blank">
+                    <a href="https://www.tiktok.com/@anonymoouzz" target="_blank">
                         <img src="assets/tiktok.png" alt="TikTok" class="social-icon">
                     </a>
                 </div>
@@ -1025,3 +1025,4 @@
 </body>
 
 </html>
+
