--- a/index.html
+++ b/index.html
@@ -910,13 +910,13 @@
                     <a href="" target="_blank">
                         <img src="assets/discord.png" alt="Discord" class="social-icon">
                     </a>
-                    <a href="https://github.com/JAQLIV" target="_blank">
+                    <a href="https://github.com/anonymoouzz" target="_blank">
                         <img src="assets/github.png" alt="GitHub" class="social-icon">
                     </a>
-                    <a href="https://www.youtube.com/@jaqliv" target="_blank">
+                    <a href="https://www.youtube.com/@99tlc" target="_blank">
                         <img src="assets/youtube.png" alt="YouTube" class="social-icon">
                     </a>
-                    <a href="https://www.tiktok.com/@jaqliv" target="_blank">
+                    <a href="https://www.tiktok.com/@anonymoouzz" target="_blank">
                         <img src="assets/tiktok.png" alt="TikTok" class="social-icon">
                     </a>
                 </div>
@@ -1014,4 +1014,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
